// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should redner Expense Summary with 1 expense coorectly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       with totalling of 
      <span>
        $1.00
      </span>
    </h1>
    <div
      className="page_header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should redner Expense Summary with more expenses coorectly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        5
      </span>
       
      expenses
       with totalling of 
      <span>
        $1.00
      </span>
    </h1>
    <div
      className="page_header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
